RESOLVED FIXED231131
REGRESSION (r283335): rubber-banding no longer locks to an axis
https://bugs.webkit.org/show_bug.cgi?id=231131
Summary REGRESSION (r283335): rubber-banding no longer locks to an axis
Simon Fraser (smfr)
Reported 2021-10-02 20:18:31 PDT
REGRESSION (r283335): rubber-banding no longer locks to an axis
Attachments
Patch (8.02 KB, patch)
2021-10-02 20:20 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2021-10-02 20:20:08 PDT
EWS
Comment 2 2021-10-03 08:52:53 PDT
Committed r283465 (242444@main): <https://commits.webkit.org/242444@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439985 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-03 08:53:16 PDT
Note You need to log in before you can comment on or make changes to this bug.