REGRESSION (r283335): rubber-banding no longer locks to an axis https://bugs.webkit.org/show_bug.cgi?id=231131

Reviewed by Tim Horton.

Source/WebCore:

r283335 introduced a bug where pulling down to rubber-band would result in sideways
motion even when the gesture was mostly vertical.

ScrollingEffectsController::modifyScrollDeltaForStretching() has some axis-locking behavior
that was broken by r283335, so restore the old behavior.

Test: fast/scrolling/mac/rubberband-axis-locking.html

* platform/mac/ScrollingEffectsController.mm:
(WebCore::ScrollingEffectsController::modifyScrollDeltaForStretching):
(WebCore::isHorizontalSide): Deleted.
(WebCore::isVerticalSide): Deleted.

LayoutTests:

* fast/scrolling/mac/rubberband-axis-locking-expected.txt: Added.
* fast/scrolling/mac/rubberband-axis-locking.html: Added.


Canonical link: https://commits.webkit.org/242444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283465 268f45cc-cd09-0410-ab3c-d52691b4dbfc